--- a/index.html
+++ b/index.html
@@ -6,59 +6,92 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>陈创个人简历</title>
 	<link rel="stylesheet" href="./style.css">
+	<script src="//at.alicdn.com/t/font_641473_3o1b3j70bo11yvi.js"></script>
+	<style type="text/css">
+		.icon {
+		   width: 1em; height: 1em;
+		   vertical-align: -0.15em;
+		   fill: currentColor;
+		   overflow: hidden;
+		}
+	</style>
 </head>
 <body>
-	<div class="topnavbar clearfix">	
-		<a class="logo"  href="#" alt="logo">
-			<span class="rs">RS</span><span class="card">card</span>
-		</a>
-
-		<nav style="float: right;">
-			<ul class="clearfix">
-				<li><a href="">关于</a></li>
-				<li><a href="">技能</a></li>
-				<li><a href="">作品</a></li>
-				<li><a href="">博客</a></li>
-				<li><a href="">日历</a></li>
-				<li><a href="">联系方式</a></li>
-				<li><a href="">其他</a></li>
-			</ul>
-		</nav>
+	<div class="topnavbar ">	
+		<div class="topnavbar-inner clearfix">
+				<a class="logo"  href="#" alt="logo">
+						<span class="rs">RS</span><span class="rscard">card</span>
+					</a>
+			
+					<nav style="float: right;">
+						<ul class="clearfix">
+							<li><a href="">关于</a></li>
+							<li><a href="">技能</a></li>
+							<li><a href="">作品</a></li>
+							<li><a href="">博客</a></li>
+							<li><a href="">日历</a></li>
+							<li><a href="">联系方式</a></li>
+							<li><a href="">其他</a></li>
+						</ul>
+					</nav>
+		</div>
+		
 	</div>
-	<div class="banner" style="background-image: "></div>
+	<div class="banner" >
+		<div class="mask"></div>
+	</div>
 	<main>
-		<div class="card">
-				<div class="picture">
-						<img src="" alt="头像">
-				</div>
-					<div class="profile">
-						<div class="text">
-							<span class="welcome">hello</span>
-							<h1>陈创</h1>
-							<p>前端开发工程师</p>
-							<hr>
-							<dl>
-								<dt>年龄</dt>
-								<dd>22</dd>
-								<dt>所在城市</dt>
-								<dd>温州</dd>
-								<dt>邮箱</dt>
-								<dd>chchuang@foxmail.com</dd>
-								<dt>手机</dt>
-								<dd>13587862772</dd>				
-							</dl>
+		<div class="card ">
+				<div class="pictureandtext clearfix">
+						<div class="picture">
+								<img src="./img/touxiang.jpg " alt="头像">
 						</div>
-					</div>
-					<footer class="media">
-						<a href="#"><img src="#" alt="..."></a>
-						<a href="#"><img src="#" alt="..."></a>
-						<a href="#"><img src="#" alt="..."></a>
-						<a href="#"><img src="#" alt="..."></a>
-						<a href="#"><img src="#" alt="..."></a>
-						<a href="#"><img src="#" alt="..."></a>
-						<a href="#"><img src="#" alt="..."></a>
+							<div class="profile">
+								<div class="text">
+									<span class="welcome">hello
+										<span class="triangle"></span>
+									</span>
+									<h1>陈创</h1>
+									<p>前端开发工程师</p>
+									<hr>
+									<dl>
+										<dt>年龄</dt>
+										<dd>22</dd>
+										<dt>所在城市</dt>
+										<dd>温州</dd>
+										<dt>邮箱</dt>
+										<dd>chchuang@foxmail.com</dd>
+										<dt>手机</dt>
+										<dd>13587862772</dd>				
+									</dl>
+								</div>
+							</div>
+						
+				</div>
+				<footer class="media">
+						<a href="#">
+							<svg class="icon" aria-hidden="true">
+								<use xlink:href="#icon-twitter"></use>
+							</svg>
+						</a>
+						<a href="#">
+							<svg class="icon" aria-hidden="true">
+								<use xlink:href="#icon-weibo"></use>
+							</svg>
+						</a>
+						<a href="#">
+							<svg class="icon" aria-hidden="true">
+								<use xlink:href="#icon-zhihu"></use>
+							</svg>
+						</a>
+						<a href="#">
+							<svg class="icon" aria-hidden="true">
+								<use xlink:href="#icon-github"></use>
+							</svg>
+						</a>
 					</footer>
 		</div>
+
 		<a href="#" class="button">下载 PDF 简历</a>
 		<P>
 			KKKKKKKKKKKKKKKKKKKKK<br>KKKKKKKKKKKKKKKKKKKKKKKK
@@ -90,6 +123,8 @@
 			<div class="small"></div>
 		</div>
 	</section>
+
+
 </body>
 </html>
 
