--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="banner" >
 		<div class="mask"></div>
 	</div>
-	<main>
+	<main >
 		<div class="card ">
 				<div class="pictureandtext clearfix">
 						<div class="picture">
@@ -91,21 +91,52 @@
 						</a>
 					</footer>
 		</div>
-
-		<a href="#" class="button">下载 PDF 简历</a>
-		<P>
+		<p class="downloadresume-wrapper">
+			<a href="./resume.doc" class="downloadresume" target="-blank" download="">下载 PDF 简历</a>
+		</p>
+		<P class="self-introduction">
 			KKKKKKKKKKKKKKKKKKKKK<br>KKKKKKKKKKKKKKKKKKKKKKKK
 		</P>
 	</main>
-	<section>
+	<section class="skills">
 		<h2>技能</h2>
-		<ol>
-			<li>HTML 5 &amp; CSS 3</li>
-			<li>JavaScript</li>
-			<li>jQuery</li>
-			<li>vue</li>
-			<li>React</li>
-			<li>HTTP</li>
+		<ol class=" clearfix">
+			<li>
+				<h3>HTML 5 &amp; CSS 3</h3>
+				<div class="progressBar" >
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+				<h3>HTML 5 &amp; CSS 3</h3>
+				<div class="progressBar" >
+					<div class="progress"></div>
+				</div>
+			</li>
+			<li>
+					<h3>JavaScript</h3>
+					<div class="progressBar" >
+						<div class="progress"></div>
+					</div>
+			</li>
+			<li>
+					<h3>jQuery</h3>
+					<div class="progressBar" >
+						<div class="progress"></div>
+					</div>
+			</li>
+			<li>
+					<h3>vue</h3>
+					<div class="progressBar" >
+						<div class="progress"></div>
+					</div>
+			</li>
+			<li>
+					<h3>React</h3>
+					<div class="progressBar" >
+						<div class="progress"></div>
+					</div>
+			</li>
 		</ol>
 	</section>
 	<section>
