--- a/index.html
+++ b/index.html
@@ -56,10 +56,20 @@
 						<a href="">技能</a>
 					</li>
 					<li>
-						<a href="">作品</a>
+						<a class="menuTigger" href="">作品</a>
+						<ul class="submenu">
+							<li>作品1</li>
+							<li>作品2</li>
+							<li>作品3</li>
+						</ul>
 					</li>
 					<li>
-						<a href="">博客</a>
+						<a class="menuTigger" href="">博客</a>
+						<ul class="submenu">
+							<li>作品1</li>
+							<li>作品2</li>
+							<li>作品3</li>
+						</ul>
 					</li>
 					<li>
 						<a href="">日历</a>
@@ -204,6 +214,23 @@
 			else{
 				topnavbar.classList.remove('sticky')
 			}
+		}
+
+		let aTags = document.getElementsByClassName('menuTigger')
+		console.log(aTags)
+		for(let i=0;i<aTags.length;i++){
+			aTags[i].onmouseenter = function(x){
+				let a=x.currentTarget
+				let brother=a.nextSibing
+				while(brother.nodeType === 3)
+				{
+					brother=brother.nextSibing
+				}
+			}
+			aTags[i].onmouseleave = function(x){
+				let a=x.currentTarget
+			}
+			
 		}
 	</script>
 	</body>
