滚动到指定元素

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 				<span class="rscard">card</span>
 			</a>
 
-			<nav style="float: right;">
+			<nav class="menu" style="float: right;">
 				<ul class="clearfix">
 					<li>
-						<a href="">关于</a>
+						<a href="#about">关于</a>
 					</li>
 					<li>
-						<a href="">技能</a>
+						<a href="#skill">技能</a>
 					</li>
-					<li>
-						<a class="menuTigger" href="">作品</a>
+					<li >
+						<a  href="#production">作品</a>
 						<ul class="submenu">
 							<li>作品1</li>
 							<li>作品2</li>
@@ -64,7 +64,7 @@
 						</ul>
 					</li>
 					<li>
-						<a class="menuTigger" href="">博客</a>
+						<a  href="#bolg">博客</a>
 						<ul class="submenu">
 							<li>作品1</li>
 							<li>作品2</li>
@@ -72,13 +72,13 @@
 						</ul>
 					</li>
 					<li>
-						<a href="">日历</a>
+						<a href="#menology">日历</a>
 					</li>
 					<li>
-						<a href="">联系方式</a>
+						<a href="#contact">联系方式</a>
 					</li>
 					<li>
-						<a href="">其他</a>
+						<a href="#other">其他</a>
 					</li>
 				</ul>
 			</nav>
@@ -89,7 +89,7 @@
 		<div class="mask"></div>
 	</div>
 	<main>
-		<div class="card ">
+		<div id="about" class="card ">
 			<div class="pictureandtext clearfix">
 				<div class="picture">
 					<img src="./img/touxiang.jpg " alt="头像">
@@ -147,7 +147,7 @@
 			<br>KKKKKKKKKKKKKKKKKKKKKKKK
 		</P>
 	</main>
-	<section class="skills">
+	<section class="skills"  id="skill">
 		<h2>技能</h2>
 		<ol class=" clearfix">
 			<li>
@@ -188,7 +188,7 @@
 			</li>
 		</ol>
 	</section>
-	<section>
+	<section  id="production">
 		<h2>作品集</h2>
 		<nav>
 			<ol>
@@ -216,21 +216,32 @@
 			}
 		}
 
-		let aTags = document.getElementsByClassName('menuTigger')
-		console.log(aTags)
-		for(let i=0;i<aTags.length;i++){
-			aTags[i].onmouseenter = function(x){
-				let a=x.currentTarget
-				let brother=a.nextSibing
-				while(brother.nodeType === 3)
-				{
-					brother=brother.nextSibing
-				}
+		let liTags = document.querySelectorAll('nav.menu > ul > li')
+		for(let i=0;i<liTags.length;i++){
+			liTags[i].onmouseenter = function(x){
+				x.currentTarget.classList.add('active')
 			}
-			aTags[i].onmouseleave = function(x){
-				let a=x.currentTarget
+			liTags[i].onmouseleave = function(x){
+				x.currentTarget.classList.remove('active')
 			}
 			
+		}
+		let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+		for(let i = 0; i<aTags.length;i++){
+			aTags[i].onclick = function(x){
+				x.preventDefault()
+				let a=x.currentTarget
+				console.log(a)
+				let href = a.getAttribute('href')
+				console.log(href)
+
+				let element = document.querySelector(href)
+				
+				console.log(element)
+				let top = element.offsetTop
+				window.scrollTo(0,top-80)
+			}
+
 		}
 	</script>
 	</body>
