--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			overflow: hidden;
 		}
 
-		.site-welcome{
+		.site-welcome {
 			display: none;
 			position: fixed;
 			top: 0;
@@ -30,7 +30,8 @@
 			justify-content: center;
 			align-items: center;
 		}
-		.site-welcome.active{
+
+		.site-welcome.active {
 			display: flex;
 		}
 	</style>
@@ -55,8 +56,8 @@
 					<li>
 						<a href="#skill">技能</a>
 					</li>
-					<li >
-						<a  href="#production">作品</a>
+					<li>
+						<a href="#production">作品</a>
 						<ul class="submenu">
 							<li>作品1</li>
 							<li>作品2</li>
@@ -64,7 +65,7 @@
 						</ul>
 					</li>
 					<li>
-						<a  href="#bolg">博客</a>
+						<a href="#bolg">博客</a>
 						<ul class="submenu">
 							<li>作品1</li>
 							<li>作品2</li>
@@ -89,7 +90,7 @@
 		<div class="mask"></div>
 	</div>
 	<main>
-		<div id="about" class="card ">
+		<div data-x id="about" class="card ">
 			<div class="pictureandtext clearfix">
 				<div class="picture">
 					<img src="./img/touxiang.jpg " alt="头像">
@@ -147,7 +148,7 @@
 			<br>技能：前端开发，Rails开发，Node.js开发
 		</P>
 	</main>
-	<section class="skills"  id="skill">
+	<section data-x class="skills" id="skill">
 		<h2>技能</h2>
 		<ol class=" clearfix">
 			<li>
@@ -188,7 +189,7 @@
 			</li>
 		</ol>
 	</section>
-	<section class="portfolio" id="production">
+	<section data-x class="portfolio" id="production">
 		<h2>作品集</h2>
 		<nav>
 			<ol class="clearfix">
@@ -198,67 +199,113 @@
 			</ol>
 			<div id="portfolioBar" class="bar state-1">
 				<div class="bar-inner"></div>
-			  </div>
+			</div>
 		</nav>
 		<script>
 			portfolio1.onclick = function () {
-			  portfolioBar.className = 'bar state-1'
+				portfolioBar.className = 'bar state-1'
 			}
 			portfolio2.onclick = function () {
-			  portfolioBar.className = 'bar state-2'
+				portfolioBar.className = 'bar state-2'
 			}
 			portfolio3.onclick = function () {
-			  portfolioBar.className = 'bar state-3'
+				portfolioBar.className = 'bar state-3'
 			}
-		  </script>
+		</script>
 		<div class="works" style="height: 597px;">
 			<div class="big" style="top: 0; left: 0;">
-			  <img src="./img/1.jpg" alt="作品1">
+				<img src="./img/1.jpg" alt="作品1">
 			</div>
 			<div class="small" style="top: 0; left: 645px;">
-			  <img src="./img/2.jpg" alt="作品2">
+				<img src="./img/2.jpg" alt="作品2">
 			</div>
 			<div class="small" style="top: 312px; left: 645px;">
-			  <img src="./img/3.jpg" alt="作品3">
+				<img src="./img/3.jpg" alt="作品3">
 			</div>
-		  </div>	
+		</div>
 	</section>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
 
 	<script>
-		setTimeout(function(){siteWelcone.classList.remove('active')},1000)
-		
-		window.onscroll = function(xx){
-			if(window.scrollY > 0){
+		setTimeout(function () { siteWelcone.classList.remove('active') }, 1000)
+
+		let specialTags = document.querySelectorAll('[data-x]')
+		for (let i = 0; i < specialTags.length; i++) {
+			specialTags[i].classList.add('offset')
+		}
+		findClosest()
+		window.onscroll = function (x) {
+			if (window.scrollY > 0) {
 				topnavbar.classList.add('sticky')
-			}
-			else{
+			} else {
 				topnavbar.classList.remove('sticky')
 			}
+			findClosest()
+		}
+
+		function findClosest() {
+			let specialTags = document.querySelectorAll('[data-x]')
+			let minIndex = 0
+			for (let i = 1; i < specialTags.length; i++) {
+				if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
+					minIndex = i
+				}
+			}
+			// minIndex 就是里窗口顶部最近的元素
+			specialTags[minIndex].classList.remove('offset')
+			let id = specialTags[minIndex].id
+			let a = document.querySelector('a[href="#' + id + '"]')
+			let li = a.parentNode
+			let brothersAndMe = li.parentNode.children
+			for (let i = 0; i < brothersAndMe.length; i++) {
+				brothersAndMe[i].classList.remove('highlight')
+			}
+			li.classList.add('highlight')
 		}
 
 		let liTags = document.querySelectorAll('nav.menu > ul > li')
-		for(let i=0;i<liTags.length;i++){
-			liTags[i].onmouseenter = function(x){
+		for (let i = 0; i < liTags.length; i++) {
+			liTags[i].onmouseenter = function (x) {
 				x.currentTarget.classList.add('active')
 			}
-			liTags[i].onmouseleave = function(x){
+			liTags[i].onmouseleave = function (x) {
 				x.currentTarget.classList.remove('active')
-			}
-			
-		}
-		let aTags = document.querySelectorAll('nav.menu > ul > li > a')
-		for(let i = 0; i<aTags.length;i++){
-			aTags[i].onclick = function(x){
-				x.preventDefault()
-				let a=x.currentTarget
-				let href = a.getAttribute('href')
-				let element = document.querySelector(href)
-				let top = element.offsetTop
-				window.scrollTo(0,top-80)
 			}
 
 		}
+		function animate(time) {
+			requestAnimationFrame(animate);
+			TWEEN.update(time);
+		}
+		requestAnimationFrame(animate);
+
+
+		let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+		for (let i = 0; i < aTags.length; i++) {
+			aTags[i].onclick = function (x) {
+				x.preventDefault()
+				let a = x.currentTarget
+				let href = a.getAttribute('href') //'#siteAbout'
+				let element = document.querySelector(href)
+				let top = element.offsetTop
+				let currentTop = window.scrollY
+				let targetTop = top - 80
+				let s = targetTop - currentTop // 路程
+				var coords = { y: currentTop }; // 起始位置
+				var t = Math.abs((s / 100) * 300) // 时间
+				if (t > 500) { t = 500 }
+				var tween = new TWEEN.Tween(coords) // 起始位置
+					.to({ y: targetTop }, t) // 结束位置 和 时间
+					.easing(TWEEN.Easing.Cubic.InOut) // 缓动类型
+					.onUpdate(function () {
+						// coords.y 已经变了
+						window.scrollTo(0, coords.y) // 如何更新界面
+					})
+					.start(); // 开始缓动
+			}
+		}
+
+
 	</script>
 	</body>
 
