--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
 	<script src="//cdn.jsdelivr.net/npm/leancloud-realtime@4.2.0/dist/realtime.browser.min.js"></script>
 
 	<script src="//at.alicdn.com/t/font_641473_3o1b3j70bo11yvi.js"></script>
-	<style type="text/css">
-		.icon {
-			width: 1em;
-			height: 1em;
-			vertical-align: -0.15em;
-			fill: currentColor;
-			overflow: hidden;
-		}
-	</style>
 </head>
 
 <body>
@@ -233,154 +224,13 @@
 
 	<script>
 
-
-		var APP_ID = 'kG67ohtbEjpk6ditRyjTzQP9-gzGzoHsz';
-		var APP_KEY = '1jV1YrVw4IoLvL3ltRgzShPt';
-
-		AV.init({
-			appId: APP_ID,
-			appKey: APP_KEY
-		});
-
-
-		let myForm = document.querySelector('#postMessageForm')
-		myForm.addEventListener('submit', function (e) {
-			e.preventDefault()
-			let content = myForm.querySelector('input[name=content]').value
-			let name = myForm.querySelector('input[name=name]').value
-			var Message = AV.Object.extend('Message');
-			var message = new Message();
-			message.save({
-				'name': name,
-				'content': content
-			}).then(function (object) {
-				let li = document.createElement('li')
-				li.innerText = `${object.attributes.name}: ${object.attributes.content}`
-				let messageList = document.querySelector('#messageList')
-				messageList.appendChild(li)
-				myForm.querySelector('input[name=content]').value = ''
-				console.log(object)
-			})
-		})
-
-
-
-		var query = new AV.Query('Message');
-		query.find()
-			.then(
-				function (messages) {
-					let array = messages.map((item) => item.attributes)
-					array.forEach((item) => {
-						let li = document.createElement('li')
-						li.innerText = `${item.name}: ${item.content}`
-						let messageList = document.querySelector('#messageList')
-						messageList.appendChild(li)
-					})
-				}
-			)
-
-
-
-
-		setTimeout(function () { siteWelcone.classList.remove('active') }, 1000)
-
-		let specialTags = document.querySelectorAll('[data-x]')
-		for (let i = 0; i < specialTags.length; i++) {
-			specialTags[i].classList.add('offset')
-		}
-		findClosest()
-		window.onscroll = function (x) {
-			if (window.scrollY > 0) {
-				topnavbar.classList.add('sticky')
-			} else {
-				topnavbar.classList.remove('sticky')
-			}
-			findClosest()
-		}
-
-		function findClosest() {
-			let specialTags = document.querySelectorAll('[data-x]')
-			let minIndex = 0
-			for (let i = 1; i < specialTags.length; i++) {
-				if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
-					minIndex = i
-				}
-			}
-			// minIndex 就是里窗口顶部最近的元素
-			specialTags[minIndex].classList.remove('offset')
-			let id = specialTags[minIndex].id
-			let a = document.querySelector('a[href="#' + id + '"]')
-			let li = a.parentNode
-			let brothersAndMe = li.parentNode.children
-			for (let i = 0; i < brothersAndMe.length; i++) {
-				brothersAndMe[i].classList.remove('highlight')
-			}
-			li.classList.add('highlight')
-		}
-
-		let liTags = document.querySelectorAll('nav.menu > ul > li')
-		for (let i = 0; i < liTags.length; i++) {
-			liTags[i].onmouseenter = function (x) {
-				x.currentTarget.classList.add('active')
-			}
-			liTags[i].onmouseleave = function (x) {
-				x.currentTarget.classList.remove('active')
-			}
-
-		}
-		function animate(time) {
-			requestAnimationFrame(animate);
-			TWEEN.update(time);
-		}
-		requestAnimationFrame(animate);
-
-
-		let aTags = document.querySelectorAll('nav.menu > ul > li > a')
-		for (let i = 0; i < aTags.length; i++) {
-			aTags[i].onclick = function (x) {
-				x.preventDefault()
-				let a = x.currentTarget
-				let href = a.getAttribute('href') //'#siteAbout'
-				let element = document.querySelector(href)
-				let top = element.offsetTop
-				let currentTop = window.scrollY
-				let targetTop = top - 80
-				let s = targetTop - currentTop // 路程
-				var coords = { y: currentTop }; // 起始位置
-				var t = Math.abs((s / 100) * 300) // 时间
-				if (t > 500) { t = 500 }
-				var tween = new TWEEN.Tween(coords) // 起始位置
-					.to({ y: targetTop }, t) // 结束位置 和 时间
-					.easing(TWEEN.Easing.Cubic.InOut) // 缓动类型
-					.onUpdate(function () {
-						// coords.y 已经变了
-						window.scrollTo(0, coords.y) // 如何更新界面
-					})
-					.start(); // 开始缓动
-			}
-		}
-
-
 	</script>
 	<script src="./swiper.min.js"></script>
-	<script>        
-		var mySwiper = new Swiper('.swiper-container', {
-			autoplay: true,
-			loop: true,
-			preventClicks: true,
-			// 如果需要分页器
-			pagination: {
-				el: '.swiper-pagination',
-			},
-
-			// 如果需要前进后退按钮
-			navigation: {
-				nextEl: '.swiper-button-next',
-				prevEl: '.swiper-button-prev',
-			},
-
-		})        
-	</script>
+	<script src="./js/swiper.js"></script>
+	<script src="./js/auto-slide-up.js"></script>
+	<script src="./js/sticky.js"></script>
+	<script src="./js/message.js"></script>
+	<script src="./js/smoothly.js"></script>
 </body>
 
 </html>
