--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<a href="#contact">联系方式</a>
 					</li>
 					<li>
-						<a href="#other">其他</a>
+						<a href="#message">留言</a>
 					</li>
 				</ul>
 			</nav>
