--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="./swiper.min.css">
 	<link rel="stylesheet" href="./bokebi.css">
+	<link rel="stylesheet" href="./print.css" media="screen and (max-width: 940px)">
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<!-- 存储服务 -->
 	<script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.9.0/dist/av-min.js"></script>
@@ -97,23 +98,27 @@
 					<!-- <img src="./img/touxiang.jpg " alt="头像"> -->
 				</div>
 				<div class="profile">
-					<div class="text">
+					<div class="text clearfix">
 						<span class="welcome">hello
 							<span class="triangle-main"></span>
 						</span>
-						<h1>陈创</h1>
-						<p>前端开发工程师</p>
+						<div class="name1">
+							<h1>陈创</h1>
+							<p>前端开发工程师</p>
+						</div>
+						<div class="age1">
+							<dl>
+								<dt>年龄</dt>
+								<dd>22</dd>
+								<dt>毕业院校</dt>
+								<dd>温州大学城市学院</dd>
+								<dt>邮箱</dt>
+								<dd>chchuang@foxmail.com</dd>
+								<dt>手机</dt>
+								<dd>13587862772</dd>
+							</dl>
+						</div>
 						<hr>
-						<dl>
-							<dt>年龄</dt>
-							<dd>22</dd>
-							<dt>毕业院校</dt>
-							<dd>温州大学城市学院</dd>
-							<dt>邮箱</dt>
-							<dd>chchuang@foxmail.com</dd>
-							<dt>手机</dt>
-							<dd>13587862772</dd>
-						</dl>
 					</div>
 				</div>
 
@@ -242,6 +247,36 @@
 							<br> 实现了一个通过可编辑的按键导航网站。通过按下按键，会打开相应的网站
 							<br> 点击圆点可进行编辑。编辑完成会通过获取该网站根目录的/favicon.ico。显示该网站图标。
 							<br>
+					</div>
+				</li>
+				<li class="p3">
+					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
+						<img src="./img/canvan.png" alt="" style="width: 100%;">
+					</a>
+					<div>
+						使用原生JS和CSS实现<br>
+						通过canvasAPI实现了一个画图板<br>
+						能够修改画笔大小和颜色<br>
+					</div>
+				</li>
+				<li class="p3">
+					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
+						<img src="./img/canvan.png" alt="" style="width: 100%;">
+					</a>
+					<div>
+						使用原生JS和CSS实现<br>
+						通过canvasAPI实现了一个画图板<br>
+						能够修改画笔大小和颜色<br>
+					</div>
+				</li>
+				<li class="p3">
+					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
+						<img src="./img/canvan.png" alt="" style="width: 100%;">
+					</a>
+					<div>
+						使用原生JS和CSS实现<br>
+						通过canvasAPI实现了一个画图板<br>
+						能够修改画笔大小和颜色<br>
 					</div>
 				</li>
 				<li class="p3">
