--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 					<li>
 						<a href="#production">作品</a>
 						<ul class="submenu">
-							<li>作品1</li>
-							<li>作品2</li>
-							<li>作品3</li>
+							<li><a href="https://github.com/Chaunceycehn/vue-cnode" target="_blank" rel="noopener noreferrer">cnode社区</a></li>
+							<li><a href="http://github.com/Chaunceycehn/express-note" target="_blank" rel="noopener noreferrer">在线便利贴</a></li>
+							<li><a href="http://github.com/Chaunceycehn/canvas" target="_blank" rel="noopener noreferrer">在线画板</a></li>
 						</ul>
 					</li>
 					<li>
@@ -259,34 +259,37 @@
 						能够修改画笔大小和颜色<br>
 					</div>
 				</li>
-				<li class="p3">
-					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
-						<img src="./img/canvan.png" alt="" style="width: 100%;">
+				<li class="p5">
+					<a class="portfolio5" target="_blank" href="https://github.com/Chaunceycehn/vue-cnode">
+						<img src="./img/cnode.png" alt="" style="width: 100%;">
 					</a>
 					<div>
-						使用原生JS和CSS实现<br>
-						通过canvasAPI实现了一个画图板<br>
-						能够修改画笔大小和颜色<br>
+						基于Vue与cnode社区提供的API搭建的高仿CNODE社区<br>
+						涉及技术栈
+axios插件的使用
+vuecli脚手架搭建工程
+vue.js计算属性
+vue.js的内置指令和事件的绑定
+vue.js的自定义事件和触发
+vue-router路由的跳转和监听<br>
+						实现首页列表，文章内容，用户信息的抓取显示<br>
 					</div>
 				</li>
-				<li class="p3">
-					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
-						<img src="./img/canvan.png" alt="" style="width: 100%;">
+				<li class="p6">
+					<a class="portfolio4" target="_blank" href="https://github.com/Chaunceycehn/express-note">
+						<img src="./img/note.png" alt="" style="width: 100%;">
 					</a>
 					<div>
-						使用原生JS和CSS实现<br>
-						通过canvasAPI实现了一个画图板<br>
-						能够修改画笔大小和颜色<br>
-					</div>
-				</li>
-				<li class="p3">
-					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
-						<img src="./img/canvan.png" alt="" style="width: 100%;">
-					</a>
-					<div>
-						使用原生JS和CSS实现<br>
-						通过canvasAPI实现了一个画图板<br>
-						能够修改画笔大小和颜色<br>
+						一个在线便利贴网站<br>
+						实现：
+						用户第三方登录
+						用户添加个人笔记
+						用户修改个人笔记
+						用户删除个人笔记<br>
+						涉及技术栈
+前端：前端代码结构的组织、模块化开发方式、webpack 及loader和插件的使用、npm 的使用、前后端联调
+后端：网站后端架构、MVC概念、Express的使用、路由、中间件、sqlite3、nodejs 调试
+运维：linux 命令行、git、pm2、代理配置<br>
 					</div>
 				</li>
 			</ol>
