图片改为外链

--- a/index.html
+++ b/index.html
@@ -234,14 +234,16 @@
 			<ol>
 				<li class="p1">
 					<a class="portfolio2" target="_blank" href="https://chaunceycehn.github.io/applelike-slide/demo.html">
-						<img src="./img/appleslide.png" alt="" style="width: 100%;">
+						<!-- <img src="./img/appleslide.png" alt="" style="width: 100%;"> -->
+						<img src="http://pflnsml2w.bkt.clouddn.com/appleslide.png" alt="" style="width: 100%;">
 					</a>
 					<div>一个简单的轮播页面，使用了Jquery库，能够实现点击切页功能</div>
 				</li>
 				<li class="p2">
 
 					<a class="portfolio3" target="_blank" href="https://chaunceycehn.github.io/nav-demo/index.html">
-						<img src="./img/TIM截图20180726142238.png" alt="" style="width: 100%;">
+						<!-- <img src="./img/TIM截图20180726142238.png" alt="" style="width: 100%;"> -->
+						<img src="http://pflnsml2w.bkt.clouddn.com/TIM%E6%88%AA%E5%9B%BE20180726142238.png" alt="" style="width: 100%;">
 					</a>
 					<div>键盘导航： 仅通过原生JS和CSS实现
 							<br> 实现了一个通过可编辑的按键导航网站。通过按下按键，会打开相应的网站
@@ -251,7 +253,8 @@
 				</li>
 				<li class="p3">
 					<a class="portfolio4" target="_blank" href="https://chaunceycehn.github.io/canvas/index.html">
-						<img src="./img/canvan.png" alt="" style="width: 100%;">
+						<!-- <img src="./img/canvan.png" alt="" style="width: 100%;"> -->
+						<img src="http://pflnsml2w.bkt.clouddn.com/canvan.png" alt="" style="width: 100%;">
 					</a>
 					<div>
 						使用原生JS和CSS实现<br>
@@ -261,7 +264,8 @@
 				</li>
 				<li class="p5">
 					<a class="portfolio5" target="_blank" href="https://github.com/Chaunceycehn/vue-cnode">
-						<img src="./img/cnode.png" alt="" style="width: 100%;">
+						<!-- <img src="./img/cnode.png" alt="" style="width: 100%;"> -->
+						<img src="http://pflnsml2w.bkt.clouddn.com/cnode.png" alt="" style="width: 100%;">
 					</a>
 					<div>
 						基于Vue与cnode社区提供的API搭建的高仿CNODE社区<br>
@@ -277,7 +281,8 @@ vue-router路由的跳转和监听<br>
 				</li>
 				<li class="p6">
 					<a class="portfolio4" target="_blank" href="https://github.com/Chaunceycehn/express-note">
-						<img src="./img/note.png" alt="" style="width: 100%;">
+						<!-- <img src="./img/note.png" alt="" style="width: 100%;"> -->
+						<img src="http://pflnsml2w.bkt.clouddn.com/note.png" alt="" style="width: 100%;">
 					</a>
 					<div>
 						一个在线便利贴网站<br>
